--- a/.gitignore
+++ b/.gitignore
@@ -109,6 +109,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+myenv/
 
 # Spyder project settings
 .spyderproject
@@ -134,3 +135,4 @@ training.json
 validation.json
 test.json
 Data_Embedding.zip
+Data_Embedding/
